# al-go-rithms

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
al_go_rithms/exercises/: hash_tables.py
tests/: test_hash_tables.py
