[tool.poetry]
name = "al-go-rithms"
version = "0.1.0"
description = "Solution to exercises from the \"A common sense to Data Structure and Algorithms\" book"
authors = ["Stefan Langenbach <stefan@langenbach.online>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
black = "^22.6.0"
pylint = "^2.14.4"
isort = "^5.10.1"
pre-commit = "^2.20.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
